<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.cbaapp.Messages" >

    <TextView
        android:id="@+id/messageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkButton"
        android:textColor="@color/txt"
        android:textStyle="bold"
        android:textSize="36sp"
        android:padding="5dp"
        android:text="@string/messages" />
    

    
    <TextView
        android:id="@+id/msgtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:text="@string/msgtitle1" />
    
    <TextView
        android:id="@+id/msg1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:text="@string/msg1" />
    
    <TextView
        android:id="@+id/msgtitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:text="@string/msgtitle2" />
    
    <TextView
        android:id="@+id/msg2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:text="@string/msg2" />
    
    <TextView
        android:id="@+id/msgtitle3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:text="@string/msgtitle3" />
    
    <TextView
        android:id="@+id/msg3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:text="@string/msg3" />
    
    <TextView
        android:id="@+id/msgtitle4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:text="@string/msgtitle4" />
    
    <TextView
        android:id="@+id/msg4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:text="@string/msg4" />
</LinearLayout>
