<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.cbaapp.AccountTransfer" >

    <TextView
        android:id="@+id/transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkButton"
        android:textColor="@color/txt"
        android:textStyle="bold"
        android:textSize="36sp"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/transfer" />
    
    <TextView
        android:id="@+id/fromAccount"
        android:background="@color/bkg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:padding="3dp"
        android:layout_marginBottom="5dp"
        android:text="@string/fromAccount" />
    
    <Spinner 
        android:id="@+id/from_spinner"
   		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginBottom="20dp"
        />
    
    <TextView
        android:id="@+id/toAccount"
        android:background="@color/bkg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textSize="24sp"
        android:padding="3dp"
        android:text="@string/toAccount" />
    
    <Spinner 
        android:id="@+id/to_spinner"
   		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginBottom="20dp"
        />
    
    <TextView
        android:id="@+id/amount"
        android:background="@color/bkg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:padding="3dp"
        android:layout_marginBottom="5dp"
        android:text="@string/combien" />
    
    <EditText 
        android:id="@+id/transbillAmountInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/amountHint"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="24sp"
        android:background="@drawable/rounded_corner"
 		android:padding="5dp"
        android:layout_marginBottom="25dp"
        />
    
    <Button 
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/confirm"
        android:textColor="@color/txt"
        android:background="@drawable/rounded_button"
        android:textStyle="bold"
        android:textSize="36sp"
        android:onClick="transferClick"
        />

</LinearLayout>
