<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bkg"
    tools:context="com.example.cbaapp.LoginPage" >

    <ImageView 
        android:contentDescription="@string/logoDescription"
        android:src="@drawable/bca"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/bankName"
        android:layout_marginBottom="1dp"
        />
    
    <TextView 
        android:id="@+id/bankName"
        android:text="@string/bankName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginCreds"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        android:textColor="@color/navy"
        android:textStyle="bold"
        />
 
    <LinearLayout
        android:id="@+id/loginCreds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        >
        
        <EditText 
        android:id="@+id/userInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/accname"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_corner"
 		android:padding="5dp"
 		android:textSize="24sp"
        android:layout_marginBottom="5dp"
        />
    
    <EditText 
        android:id="@+id/pwInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:inputType="textPassword"
        android:hint="@string/mot"
        android:textSize="24sp"
        android:background="@drawable/rounded_corner"
        android:padding="5dp"
        />
    
    <Button 
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/loginButton"
        android:background="@drawable/rounded_button"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/txt"
        android:onClick="goToMain"
        />
    
        </LinearLayout>

    
    
 
    
    

</RelativeLayout>
