<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.cbaapp.Settings" >

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkButton"
        android:textColor="@color/txt"
        android:textStyle="bold"
        android:textSize="36sp"
        android:padding="5dp"
        android:text="@string/settings" />
    
    <TextView
        android:id="@+id/langs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bkg"
        android:padding="3dp"
        android:textSize="24sp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/langs" />
    
    <Spinner 
        android:id="@+id/langs_spinner"
   		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginBottom="20dp"
        />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <TextView
        android:id="@+id/receiveMsgs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/bkg"
        android:padding="3dp"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:text="@string/recmsgs" />
        
        <CheckBox 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkboxMsgs"
            android:layout_toEndOf="@id/receiveMsgs"
            android:layout_toRightOf="@id/receiveMsgs"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_alignTop="@id/receiveMsgs"
            />
    </RelativeLayout>
    
    <Button 
        android:id="@+id/confirmButtonSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/confirm"
        android:textColor="@color/txt"
        android:textSize="36sp"
        android:background="@drawable/rounded_button"
        android:textStyle="bold"
        android:onClick="settingsClick"
        />
    

</LinearLayout>
